<?xml version="1.0"?>
<package format="3">
  <name>my_robot</name>
  <version>0.1.0</version>
  <description>TurtleBot3 + Gazebo + Nav2 helper package</description>
  <maintainer email="hyunsoo@todo.todo">hyunsoo</maintainer>
  <license>Apache License 2.0</license>

  <!-- ===== Build System ===== -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ===== Python runtime ===== -->
  <exec_depend>rclpy</exec_depend>

  <!-- ===== ROS 메시지 / 액션 의존 ===== -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <!-- ===== Nav2 Bringup (네비게이션 관련) ===== -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>

  <!-- ===== Gazebo / 센서 / RViz ===== -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- ===== 기본 메시지 타입 ===== -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- ===== 테스트 / 도구 ===== -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ===== Export: build type ===== -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>